<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="intive.ideabox.viewmodel.IdeaListViewModel" />
        <variable
            name="status"
            type="intive.ideabox.model.NetworkStatus" />

    </data>

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.IdeaListFragment">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/idea_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:onClick="@{() -> viewModel.onFabClick()}"
            android:src="@android:drawable/ic_input_add"
            android:tint="@color/colorAccent"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal"
            android:clickable="@{status.isConnected}"
            app:layout_behavior="intive.ideabox.fragment.ScrollFABBehavior" />
    </android.support.design.widget.CoordinatorLayout>
</layout>