<resources>
    <string name="app_name">IdeaBox</string>
    <string name="added_idea">Idea has been added!</string>
    <string name="edited_idea">Idea has been edited!</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="addIdea_back_button_text">BACK</string>
    <string name="idea_greetings_text">Add Your idea here:</string>
    <string name="to_short_idea">The text is too short, please provide a longer idea.</string>
    <string name="to_long_idea">The text is too long, please provide a shorter idea.</string>
    <string name="idea_proccessing">Idea is being sent... please wait for verification...</string>
    <string name="idea_default_text">default idea text</string>
    <string name="back_button">BACK</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_warning">Do You want to quit without saving?</string>
    <string name="dialog_header">Warning</string>
    <string name="add_idea_tag">addIdeaFragment</string>
    <string name="dialog_tag">dialog_tag</string>
    <string name="connection_lost_message">Connection lost, please try again later</string>
    <string name="counter_character_num">/256</string>
    <string name="maxIdeaLength">/256</string>

    <string name="input_hint_email">Email</string>
    <string name="input_hint_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="appbar_item_login">Login</string>
    <string name="snackbar_text_correct_login">User logged in</string>
    <string name="snackbar_text_incorrect_login">Incorrect credentials</string>
    <string name="status">Status:</string>
    <string name="likes">Likes: %s</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_granted">Permission granted</string>
</resources>
