<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="dialogViewModel"
            type="intive.ideabox.viewmodel.QuitAddIdeaViewModel" />
    </data>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="150dp"
    android:id = "@+id/dialog_background"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/dialog_warning"
        android:textColor="@color/colorAccent"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id = "@+id/dialog_buttons_background">

        <Button
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/dialog_btn_yes"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="16dp"
            android:text="@string/dialog_yes"
            android:onClick="@{()->dialogViewModel.positiveHandling()}"
            android:layout_marginEnd="15dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:id="@+id/dialog_btn_no"
            android:layout_width="110dp"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:background="@android:color/white"
            android:focusable="true"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:text="@string/dialog_no"
            android:onClick="@{()->dialogViewModel.negativeHandling()}"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
</layout>